# mqttmpd

./: CMakeLists.txt  mqttmpd.c
cmake/: FindMosquitto.cmake
